@@ -47,6 +47,7 @@ interface nsIStatus4Evar : nsISupports
 	readonly attribute boolean   addonbarWindowGripper;
 
 	readonly attribute boolean   advancedStatusDetectFullScreen;
+	readonly attribute boolean   advancedStatusDetectVideo;
 	readonly attribute boolean   advancedUrlbarForceBinding;
 
 	readonly attribute long      downloadButtonAction;
