@@ -1,4 +1,5 @@
 Version next
+* Add advanced option to hide status popup on fullscreen HTML5 video.
 
 Version 2014.01.25.23b
 * Initial Australis support.
